# saga

./: .gitignore  AGENTS.md  README.md
.beads/: issues.jsonl
.github/workflows/: qdrant-backup.yml
docs/: AI_SYSTEM_ANALYSIS.md  EMBEDDING_IMPLEMENTATION_PLAN.md  EMBEDDING_OUTBOX_NOTES.md  EMBEDDING_USE_CASES.md  PROJECT_ANALYSIS.md  QDRANT_SETUP.md  SEMANTIC_SEARCH.md  idea-inbox-brainstorm.md
muse/: .env.example  .gitignore  ARCHITECTURE_REVIEW.md  CLAUDE.md  DB_MIGRATION_REPORT.md  IMPLEMENTATION_PLAN.md  MONOREPO_ANALYSIS.md  MULTI_GENRE_INTEGRATION.md  convex.json  package.json  turbo.json
muse/.beads/: deletions.jsonl  issues.jsonl
muse/apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
muse/apps/tauri/src-tauri/icons/: icon.icns
muse/apps/tauri/src-tauri/resources/editor/: editor.bundle.js  editor.html  style.css
muse/apps/tauri/src-tauri/src/: lib.rs  main.rs
muse/convex/: account.ts  activity.ts  aiUsage.ts  analysis.ts  artifacts.ts  auth.config.ts  auth.ts  betterAuth.ts  billing.ts  billingCustomers.ts  billingSettings.ts  canonClaims.ts  changeEvents.ts  chatSessions.ts  collaboration.ts  comments.ts  convex.config.ts  convex.json  crons.ts  deepLinks.ts  documentDigests.ts  documents.ts  e2e.ts  entities.ts  evidence.ts  flowSessions.ts  http.ts  inbox.ts  invariants.ts  knowledgeCitations.ts  knowledgeSuggestions.ts  maintenance.ts  maintenanceNode.ts  memories.ts  presence.ts  projectAssets.ts  projectBootstrap.ts  projectTypeRegistry.ts  projects.ts  prosemirrorSync.ts  (+12 more)
muse/docs/: ARTIFACTS_SPEC.md  AUTH.md  COHERENCE_SPEC.md  (+34 more)
(+844 files in other folders)
